<resources>
    <string name="app_name">Tanmen</string>
    <string name="search">検索</string>
    <string name="serach_button">現在地から検索</string>
    <string name="distance">距離</string>
    <string name="cancel">キャンセル</string>
    <string name="five_hundred_meters">500m</string>
    <string name="one_thousand_meters">1000m</string>
    <string name="two_thousand_meters">2000m</string>
    <string name="name_label">店名</string>
    <string name="address_label">住所</string>
    <string name="hours_label">営業時間</string>
    <string name="yes">はい</string>
    <string name="no">いいえ</string>
    <string name="no_search_result">該当する店舗が見つかりませんでした。\n検索条件を変更してください。</string>
    <string name="guide_search">右下の検索ボタンから検索してください。</string>
    <string name="searching">検索中です</string>
    <string name="please_select_distance">距離を選択してください</string>
    <string name="home_guide_search">右下の検索ボタンから検索条件を設定し、検索してください。</string>
    <string name="shop_name_label">店名</string>
    <string name="shop_address_label">住所</string>
    <string name="loading">位置情報取得中です...</string>
    <string name="loading_return">位置情報取得中です...\n再度お試しください。</string>
    <string name="location_false">位置情報を取得できませんでした。\n位置情報をONにして、再度お試しください。</string>
    <string name="alert_dialog">アプリを継続するためには位置情報の取得が必要です。設定後、再起動を行ってご利用ください。</string>
    <string name="alert_message">画面に権限がないので表示できません。</string>
</resources>