<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet_contents"
    android:layout_width="match_parent"
    android:layout_height="330dp"
    android:paddingStart="18dp"
    android:paddingTop="30dp"
    android:paddingEnd="18dp"
    android:paddingBottom="30dp"
    app:behavior_peekHeight="100dp"
    app:layout_behavior="true">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/distance_title"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/distance_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/distance"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggle_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/distance_title"
        app:layout_constraintTop_toBottomOf="@id/distance_title"
        app:singleSelection="true"
        app:selectionRequired="true">

        <Button
            android:id="@+id/five_hundred_button"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/five_hundred_meters"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/one_thousand_button"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_thousand_meters"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/two_thousand_button"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two_thousand_meters"
            android:textAllCaps="false" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <Button
        android:id="@+id/search_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/serach_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggle_Button" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_Button"/>

</androidx.constraintlayout.widget.ConstraintLayout>