<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.Fragment.DetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="100dp">

        <ImageView
            android:id="@+id/shop_photo"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ramen_dining_24px"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"/>

        <TextView
            android:id="@+id/name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/name_label"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginStart="50dp"/>

        <TextView
            android:id="@+id/shop_name"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="京都北白川ラーメン魁力屋 イオンモールりんくう泉南店"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/address_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/address_label"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginStart="50dp"/>

        <TextView
            android:id="@+id/shop_address"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="大阪府泉南市りんくう南浜３−１２ 1F レストラン街内"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/shop_business_hours_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hours_label"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:paddingBottom="8dp"
            android:layout_marginStart="50dp" />

        <TextView
            android:id="@+id/shop_business_hours"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="月～日、祝日、祝前日: 11:00～23:00 （料理L.O. 23:00）"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_gravity="center" />

    </LinearLayout>
</ScrollView>